# specterext-faucet

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/cryptoadvance/specterext/faucet/: __main__.py  appconfig.py  config.py  controller.py  service.py
src/cryptoadvance/specterext/faucet/templates/faucet/: index.jinja
src/cryptoadvance/specterext/faucet/templates/faucet/components/: text-explainer.html
src/embeed/specterext/faucet/: __main__.py  config.py  controller.py  service.py
src/embeed/specterext/faucet/templates/faucet/: index.jinja
