[metadata]
name = specterext_faucet
version = 0.1.0
author = Stepan Snigirev
author_email = snigirev.stepan@gmail.com
description = Specter Desktop extension with a regtest faucet and a miner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stepansnigirev/specterext-faucet
project_urls =
    Bug Tracker = https://github.com/stepansnigirev/specterext-faucet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=true
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src